--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,9 @@
 <p>欢迎使用 {{title}}</p>
 
 <form action="/follow" method="post">
-    <label for="name">姓名：</label><input id="name" type="text">
+    <label for="name">您的姓名：</label><input id="name" type="text">
+    <br>
+    <label for="room_id">主播房间号：</label><input id="room_id" type="text">
     <br>
     <label for="phone">手机号：</label><input id="phone" type="text">
     <br>
